# speakeasy-windows

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pipeline.rs  settings.rs
src/config/: packageConfig.test.ts
src/domain/: audio.test.ts  audio.ts  state.test.ts  state.ts  types.ts
src/tauri/: commands.ts
src/ui/: App.tsx
