[package]
name = "speakeasy-windows"
version = "0.1.0"
description = "Speakeasy Windows OSS prototype"
authors = ["Speakeasy contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "speakeasy_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
