[package]
name = "speakeasy-windows"
version = "0.1.0"
description = "Speakeasy Windows OSS prototype"
authors = ["Speakeasy contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "speakeasy_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.3", features = [] }
